# ikaclipper

./: .gitignore  LICENSE  README.md  README_ja.md  config_sample.ini  pyproject.toml
src/ikaclipper/: __init__.py  cli.py  default_config.ini  process_audio.py  process_file.py  process_video.py
